; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_hdmi.c_tegra_hdmi_enable_audio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_hdmi.c_tegra_hdmi_enable_audio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_hdmi = type { i32 }

@HDMI_NV_PDISP_HDMI_GENERIC_CTRL = common dso_local global i32 0, align 4
@GENERIC_CTRL_AUDIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_hdmi*)* @tegra_hdmi_enable_audio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_hdmi_enable_audio(%struct.tegra_hdmi* %0) #0 {
  %2 = alloca %struct.tegra_hdmi*, align 8
  %3 = alloca i32, align 4
  store %struct.tegra_hdmi* %0, %struct.tegra_hdmi** %2, align 8
  %4 = load %struct.tegra_hdmi*, %struct.tegra_hdmi** %2, align 8
  %5 = load i32, i32* @HDMI_NV_PDISP_HDMI_GENERIC_CTRL, align 4
  %6 = call i32 @tegra_hdmi_readl(%struct.tegra_hdmi* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @GENERIC_CTRL_AUDIO, align 4
  %8 = load i32, i32* %3, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load %struct.tegra_hdmi*, %struct.tegra_hdmi** %2, align 8
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @HDMI_NV_PDISP_HDMI_GENERIC_CTRL, align 4
  %13 = call i32 @tegra_hdmi_writel(%struct.tegra_hdmi* %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @tegra_hdmi_readl(%struct.tegra_hdmi*, i32) #1

declare dso_local i32 @tegra_hdmi_writel(%struct.tegra_hdmi*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
